--- a/test/fixtures/hierarchicalScopes_disabled.yml
+++ b/test/fixtures/hierarchicalScopes_disabled.yml
@@ -13,7 +13,7 @@
             name: Rule AA1
             descripton: A rule targeting a 'read' action by a SimpleUser
             target:
-              subject:
+              subjects:
                 - id: urn:restorecommerce:acs:names:role
                   value: SimpleUser
                 - id: urn:restorecommerce:acs:names:roleScopingEntity
@@ -23,7 +23,7 @@
               resources:
                 - id: urn:restorecommerce:acs:names:model:entity
                   value: urn:restorecommerce:acs:model:location.Location
-              action:
+              actions:
                 - id: urn:oasis:names:tc:xacml:1.0:action:action-id
                   value: urn:restorecommerce:acs:names:action:read
             effect: PERMIT
@@ -31,7 +31,7 @@
             name: Rule AA2
             descripton: A rule targeting 'modify' action by an Admin
             target:
-              subject:
+              subjects:
                 - id: urn:restorecommerce:acs:names:role
                   value: Admin
                 - id: urn:restorecommerce:acs:names:roleScopingEntity
@@ -39,7 +39,7 @@
               resources:
                 - id: urn:restorecommerce:acs:names:model:entity
                   value: urn:restorecommerce:acs:model:location.Location
-              action:
+              actions:
                 - id: urn:oasis:names:tc:xacml:1.0:action:action-id
                   value: urn:restorecommerce:acs:names:action:modify
             effect: PERMIT
