--- a/test/fixtures/multiple_entities_with_properties.yml
+++ b/test/fixtures/multiple_entities_with_properties.yml
@@ -13,7 +13,7 @@
             name: Rule AA1
             descripton: A rule targeting a 'read' action by a SimpleUser for Location resource
             target:
-              subject:
+              subjects:
                 - id: urn:restorecommerce:acs:names:role
                   value: SimpleUser
                 - id: urn:restorecommerce:acs:names:roleScopingEntity
@@ -25,7 +25,7 @@
                   value: urn:restorecommerce:acs:model:location.Location#locid
                 - id: urn:restorecommerce:acs:names:model:property
                   value: urn:restorecommerce:acs:model:location.Location#locname
-              action:
+              actions:
                 - id: urn:oasis:names:tc:xacml:1.0:action:action-id
                   value: urn:restorecommerce:acs:names:action:read
             effect: PERMIT
@@ -33,7 +33,7 @@
             name: Rule AA2
             descripton: A rule targeting 'modify' action by a SimpleUser for Location resource
             target:
-              subject:
+              subjects:
                 - id: urn:restorecommerce:acs:names:role
                   value: SimpleUser
                 - id: urn:restorecommerce:acs:names:roleScopingEntity
@@ -45,7 +45,7 @@
                   value: urn:restorecommerce:acs:model:location.Location#locid
                 - id: urn:restorecommerce:acs:names:model:property
                   value: urn:restorecommerce:acs:model:location.Location#locname
-              action:
+              actions:
                 - id: urn:oasis:names:tc:xacml:1.0:action:action-id
                   value: urn:restorecommerce:acs:names:action:modify
             effect: PERMIT
@@ -66,7 +66,7 @@
             name: Rule AA4
             descripton: A rule targeting a 'read' action by a SimpleUser for Organization read
             target:
-              subject:
+              subjects:
                 - id: urn:restorecommerce:acs:names:role
                   value: SimpleUser
                 - id: urn:restorecommerce:acs:names:roleScopingEntity
@@ -78,7 +78,7 @@
                   value: urn:restorecommerce:acs:model:organization.Organization#orgid
                 - id: urn:restorecommerce:acs:names:model:property
                   value: urn:restorecommerce:acs:model:organization.Organization#orgname
-              action:
+              actions:
                 - id: urn:oasis:names:tc:xacml:1.0:action:action-id
                   value: urn:restorecommerce:acs:names:action:read
             effect: PERMIT
@@ -86,7 +86,7 @@
             name: Rule AA5
             descripton: A rule targeting a 'modify' action by a SimpleUser for Organization read
             target:
-              subject:
+              subjects:
                 - id: urn:restorecommerce:acs:names:role
                   value: SimpleUser
                 - id: urn:restorecommerce:acs:names:roleScopingEntity
@@ -98,7 +98,7 @@
                   value: urn:restorecommerce:acs:model:organization.Organization#orgid
                 - id: urn:restorecommerce:acs:names:model:property
                   value: urn:restorecommerce:acs:model:organization.Organization#orgname
-              action:
+              actions:
                 - id: urn:oasis:names:tc:xacml:1.0:action:action-id
                   value: urn:restorecommerce:acs:names:action:modify
             effect: PERMIT
