chore: Release v1.1.0 - See CHANELOG

--- a/cfg/config_production.json
+++ b/cfg/config_production.json
@@ -7,6 +7,12 @@
       },
       "dataStream": true,
       "source": "access-control-srv"
+    },
+    "console": {
+      "handleExceptions": false,
+      "level": "silly",
+      "colorize": true,
+      "prettyPrint": true
     }
   },
   "redis": {
