--- a/cfg/config.json
+++ b/cfg/config.json
@@ -16,6 +16,14 @@
       "prettyPrint": true
     },
     "fieldOptions": {
+      "maskFields": [
+        "password",
+        "request.password",
+        "request.token",
+        "items.[0].password",
+        "messages.[0].token",
+        "decodedMsg.token"
+      ],
       "bufferFields": [
         {
           "fieldPath": "context"
@@ -26,6 +34,22 @@
         {
           "fieldPath": "request.context.resources"
         }
+      ],
+      "omitFields": [
+        "context",
+        "custom_arguments",
+        "subject.token",
+        "token",
+        "tokens",
+        "items.[0].tokens",
+        "messages.[0].tokens",
+        "request.items.[0].tokens",
+        "response.payload.token",
+        "response.payload.tokens",
+        "request.subject.token",
+        "request.subject.tokens",
+        "users.items.[0].payload.tokens",
+        "response.items.[0].payload.tokens"
       ]
     }
   },
