--- a/package.json
+++ b/package.json
@@ -17,13 +17,13 @@
     "service"
   ],
   "dependencies": {
-    "@restorecommerce/acs-client": "^1.4.2",
+    "@restorecommerce/acs-client": "^1.4.9",
     "@restorecommerce/chassis-srv": "^1.4.4",
     "@restorecommerce/cluster-service": "^1.0.2",
-    "@restorecommerce/grpc-client": "^2.0.8",
-    "@restorecommerce/kafka-client": "^1.1.12",
+    "@restorecommerce/grpc-client": "^2.1.0",
+    "@restorecommerce/kafka-client": "^1.1.18",
     "@restorecommerce/logger": "^1.2.8",
-    "@restorecommerce/rc-grpc-clients": "^5.1.12",
+    "@restorecommerce/rc-grpc-clients": "^5.1.18",
     "@restorecommerce/resource-base-interface": "^1.4.4",
     "@restorecommerce/service-config": "^1.0.10",
     "apollo-boost": "^0.4.9",
@@ -40,6 +40,7 @@
   "devDependencies": {
     "@alenon/grpc-mock-server": "^3.1.7",
     "@grpc/proto-loader": "^0.7.10",
+    "@restorecommerce/protos": "^6.7.0",
     "@types/lodash": "^4.14.202",
     "@types/mocha": "^10.0.6",
     "@types/nock": "^11.1.0",
