--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "cross-fetch": "^4.0.0",
     "graphql-tag": "^2.12.6",
     "js-yaml": "^4.1.0",
-    "lodash": "^4.17.21",
+    "lodash-es": "^4.17.21",
     "node-eval": "^2.0.0",
     "traverse": "^0.6.8"
   },
@@ -40,7 +40,7 @@
     "@alenon/grpc-mock-server": "^3.1.9",
     "@grpc/proto-loader": "^0.7.10",
     "@restorecommerce/protos": "^6.7.0",
-    "@types/lodash": "^4.14.202",
+    "@types/lodash-es": "^4.17.12",
     "@types/mocha": "^10.0.6",
     "@types/nock": "^11.1.0",
     "@types/node": "^20.11.17",
@@ -60,11 +60,12 @@
     "should": "^13.2.3",
     "ts-node": "^10.9.2",
     "tslint": "^6.1.3",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "esbuild": "^0.20.0"
   },
   "scripts": {
     "start": "node lib/start.js",
-    "dev": "cross-env NODE_ENV=development nodemon --watch './src/**/*.ts' --exec 'ts-node' src/start.ts",
+    "dev": "cross-env NODE_ENV=development nodemon --watch './src/**/*.ts' --exec node --loader ts-node/esm ./src/start.ts",
     "test": "npm run build && npm run lint && nyc npm run mocha",
     "lint": "eslint src --ext .ts",
     "mocha": "cross-env NODE_ENV=test mocha --full-trace --exit --timeout 120000",
@@ -73,11 +74,13 @@
     "lcov-report": "nyc report --reporter=lcov",
     "coveralls": "nyc report --reporter=text-lcov | coveralls",
     "tsctests": "tsc -d -p tsconfig.test.json",
-    "build:tsc": "tsc -d",
+    "build:tsc": "esbuild ./src/start.ts --bundle --platform=node --outfile=lib/start.js --minify --tree-shaking=true --sourcemap=inline",
+    "build:jobs": "find ./src/jobs -maxdepth 1 -type f -exec bash -c 'esbuild {} --bundle --platform=node --outfile=lib/jobs/$(basename {} .ts).js --minify --tree-shaking=true --sourcemap=inline' \\;",
     "build:clean": "rimraf lib",
-    "build": "npm-run-all lint build:clean build:tsc"
+    "build": "npm-run-all lint build:clean build:tsc build:jobs"
   },
   "engines": {
-    "node": ">= 18.0.0"
-  }
+    "node": ">= 20.8.0"
+  },
+  "type": "module"
 }
