--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
   "devDependencies": {
     "@alenon/grpc-mock-server": "^3.1.9",
     "@grpc/proto-loader": "^0.7.10",
+    "@restorecommerce/dev": "^0.0.6",
     "@restorecommerce/protos": "^6.7.0",
     "@types/lodash-es": "^4.17.12",
     "@types/mocha": "^10.0.6",
@@ -49,6 +50,7 @@
     "@typescript-eslint/parser": "^6.21.0",
     "coveralls": "^3.1.1",
     "cross-env": "^7.0.3",
+    "esbuild": "^0.20.0",
     "eslint": "^8.56.0",
     "eslint-plugin-prefer-arrow-functions": "^3.2.4",
     "mocha": "^10.3.0",
@@ -60,8 +62,7 @@
     "should": "^13.2.3",
     "ts-node": "^10.9.2",
     "tslint": "^6.1.3",
-    "typescript": "^5.3.3",
-    "esbuild": "^0.20.0"
+    "typescript": "^5.3.3"
   },
   "scripts": {
     "start": "node lib/start.js",
