--- a/package.json
+++ b/package.json
@@ -76,9 +76,8 @@
     "coveralls": "nyc report --reporter=text-lcov | coveralls",
     "tsctests": "tsc -d -p tsconfig.test.json",
     "build:tsc": "esbuild ./src/start.ts --bundle --platform=node --outfile=lib/start.js --minify --tree-shaking=true --sourcemap=inline",
-    "build:jobs": "find ./src/jobs -maxdepth 1 -type f -exec bash -c 'esbuild {} --bundle --platform=node --outfile=lib/jobs/$(basename {} .ts).js --minify --tree-shaking=true --sourcemap=inline' \\;",
     "build:clean": "rimraf lib",
-    "build": "npm-run-all lint build:clean build:tsc build:jobs"
+    "build": "npm-run-all lint build:clean build:tsc"
   },
   "engines": {
     "node": ">= 20.8.0"
