--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@restorecommerce/access-control-srv",
   "version": "1.2.8",
   "description": "Access Control Service",
-  "main": "lib/start.js",
+  "main": "lib/worker.js",
   "author": "n-fuse GmbH",
   "repository": {
     "type": "git",
@@ -48,6 +48,7 @@
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/eslint-plugin-tslint": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
+    "c8": "^9.1.0",
     "coveralls": "^3.1.1",
     "cross-env": "^7.0.3",
     "esbuild": "^0.20.0",
@@ -57,7 +58,6 @@
     "nock": "^13.5.1",
     "nodemon": "^3.0.3",
     "npm-run-all": "^4.1.5",
-    "nyc": "^15.1.0",
     "rimraf": "^5.0.5",
     "should": "^13.2.3",
     "ts-node": "^10.9.2",
@@ -67,13 +67,13 @@
   "scripts": {
     "start": "node lib/start.js",
     "dev": "cross-env NODE_ENV=development nodemon --watch './src/**/*.ts' --exec node --loader ts-node/esm ./src/start.ts",
-    "test": "npm run build && npm run lint && nyc npm run mocha",
+    "test": "npm run build && npm run lint && c8 --reporter=text npm run mocha",
     "lint": "eslint src --ext .ts",
     "mocha": "cross-env NODE_ENV=test mocha --full-trace --exit --timeout 120000",
     "mocha-debug": "mocha -R spec test/*_test.js --inspect-brk",
     "test-core": "cross-env NODE_ENV=test npm run lint && npm run mocha-core",
-    "lcov-report": "nyc report --reporter=lcov",
-    "coveralls": "nyc report --reporter=text-lcov | coveralls",
+    "lcov-report": "c8 report --reporter=lcov",
+    "coveralls": "c8 report --reporter=text-lcov | coveralls",
     "tsctests": "tsc -d -p tsconfig.test.json",
     "build:tsc": "esbuild ./src/start.ts --bundle --platform=node --outfile=lib/start.js --minify --tree-shaking=true --sourcemap=inline",
     "build:clean": "rimraf lib",
