--- a/package.json
+++ b/package.json
@@ -64,6 +64,9 @@
     "tslint": "^6.1.3",
     "typescript": "^5.3.3"
   },
+  "overrides": {
+    "@grpc/grpc-js": "1.10.1"
+  },
   "scripts": {
     "start": "node lib/start.js",
     "dev": "cross-env NODE_ENV=development nodemon --watch './src/**/*.ts' --exec node --loader ts-node/esm ./src/start.ts",
