--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "control",
     "service"
   ],
+  "type": "module",
   "dependencies": {
     "@restorecommerce/acs-client": "^1.4.12",
     "@restorecommerce/chassis-srv": "^1.4.8",
@@ -38,6 +39,9 @@
   },
   "devDependencies": {
     "@alenon/grpc-mock-server": "^3.1.9",
+    "@commitlint/cli": "^18.4.3",
+    "@commitlint/config-conventional": "^18.4.3",
+    "@semantic-release-plus/docker": "^3.1.3",
     "@grpc/proto-loader": "^0.7.10",
     "@restorecommerce/dev": "^0.0.8",
     "@restorecommerce/protos": "^6.7.0",
@@ -54,6 +58,7 @@
     "esbuild": "^0.20.1",
     "eslint": "^8.57.0",
     "eslint-plugin-prefer-arrow-functions": "^3.3.2",
+    "husky": "^8.0.0",
     "mocha": "^10.3.0",
     "nock": "^13.5.4",
     "nodemon": "^3.1.0",
@@ -85,5 +90,33 @@
   "engines": {
     "node": ">= 20.8.0"
   },
-  "type": "module"
+  "release": {
+    "branches": [
+      "master"
+    ],
+    "plugins": [
+      "@semantic-release/commit-analyzer",
+      "@semantic-release/release-notes-generator",
+      "@semantic-release/github",
+      [
+        "@semantic-release-plus/docker",
+        {
+          "name": "docker.io/restorecommerce/access-control-srv",
+          "skipLogin": true
+        }
+      ],
+      [
+        "@semantic-release-plus/docker",
+        {
+          "name": "ghcr.io/restorecommerce/access-control-srv",
+          "skipLogin": true
+        }
+      ]
+    ]
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
+  }
 }
