--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "author": "n-fuse GmbH",
   "repository": {
     "type": "git",
-    "url": "https://gitlab.n-fuse.co/restorecommerce/access-control-srv.git"
+    "url": "https://github.com/restorecommerce/access-control-srv.git"
   },
   "license": "MIT",
   "keywords": [
