--- a/package.json
+++ b/package.json
@@ -41,10 +41,10 @@
     "@alenon/grpc-mock-server": "^3.1.9",
     "@commitlint/cli": "^18.4.3",
     "@commitlint/config-conventional": "^18.4.3",
-    "@semantic-release-plus/docker": "^3.1.3",
     "@grpc/proto-loader": "^0.7.10",
     "@restorecommerce/dev": "^0.0.8",
     "@restorecommerce/protos": "^6.7.0",
+    "@semantic-release-plus/docker": "^3.1.3",
     "@types/lodash-es": "^4.17.12",
     "@types/mocha": "^10.0.6",
     "@types/nock": "^11.1.0",
@@ -55,6 +55,7 @@
     "c8": "^9.1.0",
     "coveralls": "^3.1.1",
     "cross-env": "^7.0.3",
+    "cz-conventional-changelog": "^3.3.0",
     "esbuild": "^0.20.1",
     "eslint": "^8.57.0",
     "eslint-plugin-prefer-arrow-functions": "^3.3.2",
