--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@types/mocha": "^10.0.6",
     "@types/nock": "^11.1.0",
     "@types/node": "^20.11.29",
+    "@types/traverse": "^0.6.36",
     "@typescript-eslint/eslint-plugin": "^7.3.1",
     "@typescript-eslint/eslint-plugin-tslint": "^7.0.2",
     "@typescript-eslint/parser": "^7.3.1",
