--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@types/nock": "^11.1.0",
     "@types/node": "^20.12.7",
     "@typescript-eslint/eslint-plugin": "^7.7.0",
+    "@types/traverse": "^0.6.36",
     "@typescript-eslint/eslint-plugin-tslint": "^7.0.2",
     "@typescript-eslint/parser": "^7.7.0",
     "c8": "^9.1.0",
