feat(multi-policy-set-support): impl. of multi-policy-set-support: prioritizedAlgorithm
prioritizedAlgorithm controles what policy-set can overvote other policy-sets

--- a/cfg/config.json
+++ b/cfg/config.json
@@ -276,7 +276,8 @@
           "urn": "urn:oasis:names:tc:xacml:3.0:rule-combining-algorithm:first-applicable",
           "method": "firstApplicable"
         }
-      ]
+      ],
+      "prioritizedAlgorithem": "prioritizedAlgorithem"
     }
   },
   "adapter": {
