fix(multi-policy-set-support): propagate the combiningAlgorithm to the outer lever

--- a/cfg/config.json
+++ b/cfg/config.json
@@ -277,7 +277,7 @@
           "method": "firstApplicable"
         }
       ],
-      "prioritizedAlgorithem": "prioritizedAlgorithem"
+      "prioritizedAlgorithm": "prioritizedAlgorithm"
     }
   },
   "adapter": {
