--- a/package.json
+++ b/package.json
@@ -18,14 +18,14 @@
   ],
   "type": "module",
   "dependencies": {
-    "@restorecommerce/acs-client": "^2.0.0",
+    "@restorecommerce/acs-client": "3.0.5",
     "@restorecommerce/chassis-srv": "^1.6.2",
-    "@restorecommerce/grpc-client": "^2.2.4",
-    "@restorecommerce/kafka-client": "^1.2.10",
-    "@restorecommerce/logger": "^1.3.1",
-    "@restorecommerce/rc-grpc-clients": "^5.1.32",
+    "@restorecommerce/grpc-client": "2.2.5",
+    "@restorecommerce/kafka-client": "1.2.18",
+    "@restorecommerce/logger": "1.3.2",
+    "@restorecommerce/rc-grpc-clients": "5.1.40",
     "@restorecommerce/resource-base-interface": "^1.6.2",
-    "@restorecommerce/service-config": "^1.0.15",
+    "@restorecommerce/service-config": "1.0.16",
     "apollo-boost": "^0.4.9",
     "apollo-cache-inmemory": "^1.6.6",
     "apollo-client": "^2.6.10",
@@ -35,41 +35,38 @@
     "js-yaml": "^4.1.0",
     "lodash-es": "^4.17.21",
     "node-eval": "^2.0.0",
-    "traverse": "^0.6.9"
+    "traverse": "0.6.10"
   },
   "devDependencies": {
-    "@alenon/grpc-mock-server": "^3.1.10",
-    "@commitlint/cli": "^19.2.2",
-    "@commitlint/config-conventional": "^19.2.2",
+    "@alenon/grpc-mock-server": "3.1.15",
+    "@commitlint/cli": "19.5.0",
+    "@commitlint/config-conventional": "19.5.0",
     "@grpc/proto-loader": "^0.7.12",
-    "@restorecommerce/dev": "^0.0.12",
-    "@restorecommerce/protos": "^6.8.2",
+    "@restorecommerce/dev": "0.0.13",
+    "@restorecommerce/protos": "6.9.2",
     "@semantic-release-plus/docker": "^3.1.3",
     "@types/lodash-es": "^4.17.12",
-    "@types/mocha": "^10.0.6",
-    "@types/nock": "^11.1.0",
-    "@types/node": "^20.12.7",
+    "@types/mocha": "10.0.9",
+    "@types/nock": "10.0.3",
+    "@types/node": "22.9.0",
     "@types/traverse": "^0.6.37",
-    "@typescript-eslint/eslint-plugin": "^7.7.0",
-    "@typescript-eslint/eslint-plugin-tslint": "^7.0.2",
-    "@typescript-eslint/parser": "^7.7.0",
     "c8": "^10.1.2",
     "coveralls": "^3.1.1",
     "cross-env": "^7.0.3",
     "cz-conventional-changelog": "^3.3.0",
-    "esbuild": "^0.21.4",
-    "eslint": "^8.56.0",
-    "eslint-plugin-prefer-arrow-functions": "^3.3.2",
-    "husky": "^9.0.11",
-    "mocha": "^10.5.2",
-    "nock": "^13.5.4",
-    "nodemon": "^3.1.4",
+    "esbuild": "0.24.0",
+    "eslint": "9.14.0",
+    "typescript-eslint": "8.13.0",
+    "husky": "9.1.6",
+    "mocha": "10.8.2",
+    "nock": "13.5.6",
+    "nodemon": "3.1.7",
     "npm-run-all": "^4.1.5",
-    "rimraf": "^5.0.5",
+    "rimraf": "6.0.1",
     "should": "^13.2.3",
     "ts-node": "^10.9.2",
-    "tslint": "^6.1.3",
-    "typescript": "^5.5.2"
+    "tslint": "5.20.1",
+    "typescript": "^5.6.3"
   },
   "overrides": {
     "@grpc/grpc-js": "1.10.1"
@@ -78,7 +75,7 @@
     "start": "node lib/start.cjs",
     "dev": "cross-env NODE_ENV=development nodemon --watch './src/**/*.ts' --exec node --loader ts-node/esm ./src/start.ts",
     "test": "npm run build && npm run lint && c8 --reporter=text npm run mocha",
-    "lint": "eslint src --ext .ts",
+    "lint": "eslint src",
     "mocha": "cross-env NODE_ENV=test mocha --full-trace --exit --timeout 120000",
     "mocha-debug": "mocha -R spec test/*_test.js --inspect-brk",
     "test-core": "cross-env NODE_ENV=test npm run lint && npm run mocha-core",
